--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -48,13 +48,25 @@ button {
     border-radius: 1rem;
     padding: 1rem;
     background-color: var(--color_green);
+    border: 1px solid var(--color_green);
     color: var(--color_white);
     font-weight: bold;
     cursor: pointer;
     transition: background-color ease 80ms;
 
-    &:hover {
+    &.secondary {
+        background-color: var(--color_gray);
+        border-color: var(--color_gray);
+    }
+
+    &:not(:disabled):hover {
         background-color: var(--color_green-dark);
+        border-color: var(--color_green-dark);
+    }
+
+    &:disabled {
+        cursor: not-allowed;
+        opacity: 0.7;
     }
 }
 
@@ -180,9 +192,22 @@ button {
 }
 
 .PW-dashboard-card {
+    max-width: 30rem;
+    min-width: 20rem;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 1rem;
+    padding: 2rem;
+    background: var(--color_blue);
+    border: 2px solid var(--color_green-dark);
+    border-radius: 1rem;
+}
+
+.PW-dashboard-card-buttons {
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    gap: .5rem;
 }
 
 /* Notification */
