--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -27,9 +27,20 @@ h1 {
     margin: 0;
 }
 
+h3 {
+    font-size: 2rem;
+}
+
 p {
     font-size: 1.6rem;
 }
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: var(--color_gray);
+}
+
 
 input {
     outline: none;
@@ -52,11 +63,21 @@ button {
     color: var(--color_white);
     font-weight: bold;
     cursor: pointer;
-    transition: background-color ease 80ms;
+    transition: background-color ease 80ms, border-color ease 80ms;
 
     &.secondary {
         background-color: var(--color_gray);
         border-color: var(--color_gray);
+    }
+
+    &.red {
+        background-color: var(--color_gray);
+        border-color: var(--color_gray);
+
+        &:hover {
+            background-color: var(--color_red) !important;
+            border-color: var(--color_red) !important;
+        }
     }
 
     &:not(:disabled):hover {
@@ -186,9 +207,38 @@ button {
 }
 
 .PW-dashboard-cards {
+    width: 100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 1rem;
+}
+
+.PW-dashboard-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: .5rem;
+
+    img {
+        height: 2.4rem;
+    }
+}
+
+.PW-dashboard-input-extended {
+    display: grid;
+    grid-template-columns: max-content auto max-content;
+    align-items: center;
+    gap: .5rem;
+
+    img {
+        height: 2.4rem;
+    }
+
+    .PW-copy-user,
+    .PW-copy-password {
+        cursor: pointer;
+    }
 }
 
 .PW-dashboard-card {
@@ -201,6 +251,15 @@ button {
     padding: 2rem;
     background: var(--color_blue);
     border: 2px solid var(--color_green-dark);
+    border-radius: 1rem;
+}
+
+.PW-dashboard-card-data {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    background-color: var(--color_blue-dark);
+    padding: 1rem;
     border-radius: 1rem;
 }
 
