--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -247,6 +247,8 @@ button {
     width: 100%;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    flex-basis: 0%;
     gap: 1rem;
     padding: 2rem;
     background: var(--color_blue);
